# ete

./: .buildinfo  .coveragerc  .gitignore  .gitorious  .travis.yml  ACKNOWLEDGEMENTS  AUTHORS  CHANGELOG  CITATION.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTING.rst  DATE  FAQ  FILE_HEADER.txt  HistFace.py  INSTALL  MANIFEST.in  NEWS  README  README.md  README.rst  TEST_EXTRA_FACES.py  THANKS  THANKS.md  THANKS.rst  THANKS.txt  TODO  VERSION  ___HEADER_TEMPLATE.txt  ___build_ete.py  ___build_ete.py.bak  ___put_disclaimer.py  ___put_disclamer.py  ___put_disclamer.py.bak  about.html  addons.py  appveyor.yml  bash_colors.sh  build_ete.sh  (+36 more)
.github/: FUNDING.yml
1296515401_add-histface-to-webplugin_84/: ASSIGNED_francois@barrabin  TICKET_ID  TICKET_TITLE
_modules/: index.html
_sources/: about.rst.txt  faqs.rst.txt  index.rst.txt
_static/: documentation_options.js
app/: README
doc/: Makefile  about.rst  ack.rst  bugs.rst  changelog.rst  cheatsheet.rst  conf.py  contribute.rst  face_grid.py  faqs.rst  hola.rst  index.rst  license.rst  reference.rst  reference_clustering.rst  reference_phylo.rst  reference_phyloxml.rst  reference_tree.rst  reference_treeview.rst  support.rst  tutorial.rst  tutorial_about.rst  tutorial_clustering.rst  tutorial_drawing.rst  tutorial_nexml.rst  tutorial_phylogeny.rst  tutorial_phylomedb.rst  tutorial_phyloxml.rst  tutorial_trees.rst  tutorial_webplugin.rst  tutorial_xml.rst  update.sh
doctrees/: about.doctree  environment.pickle  faqs.doctree  index.doctree
ete2/: __init__.py  __init__.py~  _ph.py  utils.py
ete3/: __init__.py  (+6 more)
(+2326 files in other folders)
